--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,6 +13,7 @@
     "react/destructuring-assignment": "off",
     "jsx-a11y/click-events-have-key-events": "off",
     "jsx-a11y/no-static-element-interactions": "off",
+    "jsx-a11y/label-has-associated-control": 0,
     "no-underscore-dangle": "off",
     "react/function-component-definition": 0,
     "class-methods-use-this": 0,
@@ -23,6 +24,7 @@
     "import/no-unresolved": 0,
     "lines-between-class-members": 0,
     "no-use-before-define": 0,
-    "react-hooks/exhaustive-deps": 0
+    "react-hooks/exhaustive-deps": 0,
+    "default-param-last": 0
   }
 }
